# battery-ha-bridge

./: Cargo.toml  README.md  docker-compose.example.yml  repository.yaml
.github/workflows/: builder.yml
apparmor/: battery-bridge
battery_bridge/: DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
src/: hass.rs  main.rs
