[package]
name = "battery-ha-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Home Assistant MQTT-discovery bridge for battery_control devices"
license = "MIT"
repository = "https://github.com/v0l/battery-ha-bridge"
publish = false

[features]
default = []
# Linux-only Pylontech CAN socket transport.
can = ["battery_control/can-socket"]

[dependencies]
# Pinned to an exact upstream commit; bump the rev to pull in lib updates.
battery_control = { git = "https://github.com/v0l/battery-control", rev = "11eb7b2ca8410ad2217a8ab927fa5089ce028bd1", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
rumqttc = "0.24"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive", "env"] }
